traceback.txt
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/pudb/__init__.py", line 153, in runscript
    dbg._runscript(mainpyfile)
  File "/usr/local/lib/python2.7/dist-packages/pudb/debugger.py", line 468, in _runscript
    self.run(statement)
  File "/usr/lib/python2.7/bdb.py", line 400, in run
    exec cmd in globals, locals
  File "<string>", line 1, in <module>
  File "mezcla.py", line 55
    l_lineas[pos_min] = l_manejadores[pos_min].readline().rstrip('\n').split(",")
           ^
SyntaxError: invalid syntax
